<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#E8F5E9"
        android:hint="@string/Titel"
        android:textColor="#7EC580"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextNationalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/NationalCode"
        android:inputType="number"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextTextPlaceOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/placeOfBirth"
        android:inputType="textPersonName"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNationalCode"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextTextAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/adress"
        android:inputType="textPersonName"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPlaceOfBirth"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/PostalCode"
        android:inputType="number"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextAdress"
        tools:layout_editor_absoluteX="0dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        tools:layout_editor_absoluteX="-9dp">

        <RadioButton
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="30dp"
            android:text="@string/mail"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />

        <RadioButton
            android:id="@+id/fmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fmail"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="529dp" />

    <Button
        android:id="@+id/submitInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submitInformation"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="187dp"
        android:layout_margin="10dp"
        android:backgroundTint="#FF00FF"/>


</androidx.constraintlayout.widget.ConstraintLayout>